--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             </ul>
 
             <span class="footer__copy">
-                &#169; Bedimcode. All rights reserved
+                &#169; Designed by Bedimcode
             </span>
         </div>
     </footer>
