--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
         <!--=============== SKILLS ===============-->
         <section class="skills section" id="skills">
             <span class="section__subtitle">My Abilities</span>
-            <h2 class="section__title">My Experience</h2>
+            <h2 class="section__title">What I've learned</h2>
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills_title">Frontend developer</h3>
+                    <h3 class="skills_title">Frontend development</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -394,8 +394,8 @@
 
                             <h3 class="services__modal-title">Data Science</h3>
                             <p class="services__modal-description">
-                                I have mostly enjoyed applying data to
-                                Machine Learning models and study the accuracy.
+                                I have enjoyed the most applying data to
+                                Machine Learning models and studying the accuracy.
                             </p>
 
                             <ul class="services__modal-list">
@@ -473,7 +473,7 @@
                 <div class="work__card mix datascience">
                     <img src="assets/knn.PNG" alt="" class="work__img">
 
-                    <h3 class="work__title">Classifying neural data with K-NN</h3>
+                    <h3 class="work__title">K-NN classifier for neural data</h3>
 
                     <a href="https://github.com/Estibaliz26/TNUI_KNNClassifier" class="work__button">
                         Code <i class='bx bx-right-arrow-alt work__icon'></i>
@@ -493,18 +493,13 @@
                 <div class="work__card mix datascience">
                     <img src="assets/gpt2.PNG" alt="" class="work__img">
 
-                    <h3 class="work__title">Generate synopsis using GPT2</h3>
+                    <h3 class="work__title">GPT2-based synopsis generator</h3>
 
                     <a href="https://github.com/Estibaliz26/Deep-Learning-using-GPT2" class="work__button">
                         Code <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
             </div>
-        </section>
-
-        <!--=============== TESTIMONIALS ===============-->
-        <section class="testimonial section">
-
         </section>
 
         <!--=============== CONTACT ===============-->
