--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 </div>
 
                 <div class="home__handle">
+                    <img src="assets/bb.png" alt="" class="home__img">
                     <!----- <img src="assets/perfil.png" alt="" class="home__img"> ----->
                 </div>
 
