--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="home__handle">
-                    <img src="assets/bb.png" alt="" class="home__img">
+                    <img src="assets/me.png" alt="" class="home__img">
                     <!----- <img src="assets/perfil.png" alt="" class="home__img"> ----->
                 </div>
 
@@ -130,7 +130,7 @@
                     <p class="about__description">
                         I'm a penultimate year CS and Mathematics student at
                         University of Barcelona, keen on Data Science and
-                        Frontend Development with the aim of develop
+                        Frontend Development with the aim of developing
                         my career overseas.
                     </p>
 
