LAD content included + Abilities updated

--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">R</h3>
-                                    <span class="skills__level">Basic</span>
+                                    <h3 class="skills__name">MySQL</h3>
+                                    <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">MySQL</h3>
-                                    <span class="skills__level">Intermediate</span>
+                                    <h3 class="skills__name">NoSQL</h3>
+                                    <span class="skills__level">Basic</span>
                                 </div>
                             </div>
                         </div>
@@ -451,6 +451,16 @@
             </div>
 
             <div class="work__container container grid">
+                <div class="work__card mix web">
+                    <img src="assets/LAD.png" alt="" class="work__img">
+
+                    <h3 class="work__title">LA Students Dashboard</h3>
+
+                    <a href="https://la-e-feedskill.herokuapp.com/" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
                 <div class="work__card mix web">
                     <img src="assets/ubending.PNG" alt="" class="work__img">
 
