--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">8 Months Working</span>
+                            <span class="about__subtitle">2 years & 4 Months Working</span>
                         </div>
 
                         <div class="about__box">
@@ -197,7 +197,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Vue.JS</h3>
+                                    <h3 class="skills__name">React.js</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -222,7 +222,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">MySQL</h3>
+                                    <h3 class="skills__name">SQL</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -230,7 +230,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">NoSQL</h3>
+                                    <h3 class="skills__name">Tableau</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -395,8 +395,8 @@
 
                             <h3 class="services__modal-title">Data Science</h3>
                             <p class="services__modal-description">
-                                I have enjoyed the most applying data to
-                                Machine Learning models and studying the accuracy.
+                                Applying data to Machine Learning models and
+                                studying their accuracy
                             </p>
 
                             <ul class="services__modal-list">
@@ -404,7 +404,7 @@
                                     <i class='bx bx-check services__modal-icon'></i>
 
                                     <p class="services__modal-info">
-                                        Using data to discover trends.
+                                        Using data to discover trends and existing problems.
                                     </p>
                                 </li>
 
@@ -412,7 +412,7 @@
                                     <i class='bx bx-check services__modal-icon'></i>
 
                                     <p class="services__modal-info">
-                                        Discovering existing problems through data.
+                                        Working with supervised, semi-supervised and reinforcement algorithms.
                                     </p>
                                 </li>
 
@@ -420,7 +420,7 @@
                                     <i class='bx bx-check services__modal-icon'></i>
 
                                     <p class="services__modal-info">
-                                        Applying Machine Learning models.
+                                        Doing time series analysis.
                                     </p>
                                 </li>
 
@@ -448,6 +448,7 @@
                 <span class="work__item" data-filter='.web'>Web</span>
                 <span class="work__item" data-filter='.mobile'>Mobile</span>
                 <span class="work__item" data-filter='.datascience'>Data Science</span>
+                <span class="work__item" data-filter='.dataanalytics'>Data Analytics</span>
             </div>
 
             <div class="work__container container grid">
@@ -507,6 +508,16 @@
                     <h3 class="work__title">GPT2-based synopsis generator</h3>
 
                     <a href="https://github.com/Estibaliz26/Deep-Learning-using-GPT2" class="work__button">
+                        Code <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix dataanalytics">
+                    <img src="assets/HR-analysis.PNG" alt="" class="work__img">
+
+                    <h3 class="work__title">HR data Analysis</h3>
+
+                    <a href="https://github.com/Estibaliz26/HR-Data-Analysis" class="work__button">
                         Code <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
