--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">2 years & 4 Months Working</span>
+                            <span class="about__subtitle">2 years & 4 Months</span>
                         </div>
 
                         <div class="about__box">
