Update About me summary + cards info

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="about__box">
                             <i class='bx bxs-graduation about__icon'></i>
                             <h3 class="about__title">Graduation</h3>
-                            <span class="about__subtitle">2023 Expected</span>
+                            <span class="about__subtitle">September 2023</span>
                         </div>
 
                         <div class="about__box">
@@ -128,9 +128,9 @@
                     </div>
 
                     <p class="about__description">
-                        I'm a penultimate year CS and Mathematics student at
-                        University of Barcelona, keen on Data Science and
-                        Frontend Development with the aim of developing
+                        I'm a graduate in CS and Mathematics from
+                        University of Barcelona, keen on Data Science, Analytics 
+                        and Visualization with the aim of developing
                         my career overseas.
                     </p>
 
