--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Jupyter Notebook</h3>
-                                    <span class="skills__level">Advanced</span>
+                                    <h3 class="skills__name">Scikit-learn</h3>
+                                    <span class="skills__level">Basic</span>
                                 </div>
                             </div>
                         </div>
