--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills_title">Data Science & Analytics</h3>
+                    <h3 class="skills_title">Data Analytics</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -181,14 +181,6 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">SQL</h3>
-                                    <span class="skills__level">Intermediate</span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
                                     <h3 class="skills__name">Excel</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
@@ -197,7 +189,15 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Scikit-learn</h3>
+                                    <h3 class="skills__name">SQL</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">MongoDB</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
