--- a/index.html
+++ b/index.html
@@ -445,10 +445,9 @@
 
             <div class="work__filters">
                 <span class="work__item active-work" data-filter='all'>All</span>
-                <span class="work__item" data-filter='.web'>Web</span>
-                <span class="work__item" data-filter='.mobile'>Mobile</span>
                 <span class="work__item" data-filter='.datascience'>Data Science</span>
                 <span class="work__item" data-filter='.dataanalytics'>Data Analytics</span>
+                <span class="work__item" data-filter='.web'>Data Visualization</span>
             </div>
 
             <div class="work__container container grid">
@@ -469,16 +468,6 @@
 
                     <a href="https://ubending4.herokuapp.com/" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
-                    </a>
-                </div>
-
-                <div class="work__card mix mobile">
-                    <img src="assets/somnia.png" alt="" class="work__img">
-
-                    <h3 class="work__title">Android App for sleeping tracking</h3>
-
-                    <a href="https://github.com/Estibaliz26/Somnia--AndroidApp" class="work__button">
-                        Code <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
