--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                     <i class='bx bx-check services__modal-icon'></i>
 
                                     <p class="services__modal-info">
-                                        Using tools like PowerBI or Tableau to create dashboards.
+                                        Using tools like Excel or Tableau to create dashboards.
                                     </p>
                                 </li>
                             </ul>
@@ -447,7 +447,7 @@
                 <span class="work__item active-work" data-filter='all'>All</span>
                 <span class="work__item" data-filter='.datascience'>Data Science</span>
                 <span class="work__item" data-filter='.dataanalytics'>Data Analytics</span>
-                <span class="work__item" data-filter='.web'>Data Visualization</span>
+                <span class="work__item" data-filter='.dataviz'>Data Visualization</span>
             </div>
 
             <div class="work__container container grid">
