--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             </div>
 
             <div class="work__container container grid">
-                <div class="work__card mix web">
+                <div class="work__card mix dataviz">
                     <img src="assets/LAD.png" alt="" class="work__img">
 
                     <h3 class="work__title">LA Students Dashboard</h3>
