--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix web">
+                <!--<div class="work__card mix web">
                     <img src="assets/ubending.PNG" alt="" class="work__img">
 
                     <h3 class="work__title">Website for selling second-hand items</h3>
@@ -469,7 +469,7 @@
                     <a href="https://ubending4.herokuapp.com/" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
-                </div>
+                </div>-->
 
                 <div class="work__card mix datascience">
                     <img src="assets/knn.PNG" alt="" class="work__img">
@@ -481,7 +481,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix web">
+                <!--<div class="work__card mix web">
                     <img src="assets/ticketmonster.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Website for buying tickets</h3>
@@ -489,7 +489,7 @@
                     <a href="https://github.com/Estibaliz26/Ticket-Monster-Website_SD" class="work__button">
                         Code <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
-                </div>
+                </div>-->
 
                 <div class="work__card mix datascience">
                     <img src="assets/gpt2.PNG" alt="" class="work__img">
