--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                                 <div>
                                     <h3 class="skills__name">Pandas</h3>
-                                    <span class="skills__level">Intermediate</span>
+                                    <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
                             <div class="skills__data">
